--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="default-src https:; script-src 'sha256-k1AjVTGMsLUKJZ3AfPHk28ISFFNE0gfO+pTbuMtwCfE=';" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'sha256-k1AjVTGMsLUKJZ3AfPHk28ISFFNE0gfO+pTbuMtwCfE=';" />
     <meta
       name="description"
       content="A Simple PWA Calculator"
