--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="default-src https: 'unsafe-inline' 'unsafe-eval' " />
+    <meta http-equiv="Content-Security-Policy" content="default-src https://calculator-puce.vercel.app 'unsafe-inline' 'unsafe-eval' " />
     <meta
       name="description"
       content="A Simple PWA Calculator"
