--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://calculator-puce.vercel.app" />
+    <link rel="preconnect" href="https://storage.googleapis.com" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Security-Policy" content="default-src https://calculator-puce.vercel.app 'unsafe-inline' 'unsafe-eval' " />
-    <link rel="preload" href="%PUBLIC_URL%/manifest.json" as="manifest">
+    <link rel="preload" href="https://calculator-puce.vercel.app/precache-manifest.62dc142fb6fae92677bebec22a68d64b.js" as="script">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" sizes="48x48" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
