--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://storage.googleapis.com" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="default-src https://calculator-puce.vercel.app 'unsafe-inline' 'unsafe-eval' " />
+    <meta http-equiv="Content-Security-Policy" content="default-src https://calc-pwa.vercel.app 'unsafe-inline' 'unsafe-eval' " />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" sizes="48x48" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
